weve done it again

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -23,6 +23,9 @@
         *, *:hover, input, select, button, textarea, label {
             cursor: url('./static/images/cursor.cur'), auto !important;
         }
+        *:active, *:hover:active, input:active, select:active, button:active, textarea:active, label:active {
+            cursor: url('./static/images/cursor_grab.cur'), auto !important;
+        }
         input[type="number"]::-webkit-inner-spin-button, 
         input[type="number"]::-webkit-outer-spin-button {
             cursor: url('./static/images/cursor.cur'), auto !important;
